--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@ serving_dir
 *.csv
 *.parquet
 !**/rides.csv
+# Default .gitignore content added by dbt Cloud# you shouldn't commit these into source control
+# these are the default directory names, adjust/add to fit your needs
+target/
+dbt_packages/
+logs/
+# end dbt Cloud content
