Modified data source file

--- a/04-analytics-engineering/taxi_rides_ny/models/staging/sources.yml
+++ b/04-analytics-engineering/taxi_rides_ny/models/staging/sources.yml
@@ -3,13 +3,13 @@ sources:
     description: Raw taxi trip data from NYC TLC
     database: |
       {%- if target.type == 'bigquery' -%}
-        {{ env_var('GCP_PROJECT_ID', 'your-project-id') }}
+        {{ env_var('GCP_PROJECT_ID', 'lydia-zoomcamp') }}
       {%- else -%}
         taxi_rides_ny
       {%- endif -%}
     schema: |
       {%- if target.type == 'bigquery' -%}
-        nytaxi
+        zoomcamp
       {%- else -%}
         prod
       {%- endif -%}
